--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@mui/material": "^5.14.14",
     "firebase": "^10.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
     "@it-incubator/eslint-config": "^1.0.1",
