--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.14",
+    "@reduxjs/toolkit": "^1.9.7",
     "firebase": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
