--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@hookform/resolvers": "^3.3.3",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.7",
     "firebase": "^10.5.0",
+    "imask": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@it-incubator/eslint-config": "^1.0.1",
