--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@storybook/addon-links": "7.5.1",
     "@storybook/addon-onboarding": "1.0.8",
     "@storybook/blocks": "7.5.1",
+    "@storybook/builder-vite": "^7.6.10",
     "@storybook/react": "7.5.1",
     "@storybook/react-vite": "7.5.1",
     "@storybook/testing-library": "0.2.2",
