--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.7",
+    "@storybook/addon-a11y": "^7.6.10",
     "firebase": "^10.5.0",
     "imask": "^7.3.0",
     "react": "^18.2.0",
