--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-imask": "^7.3.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "redux-persist": "^6.0.0",
